# pgDictGen

./: .env_template  .gitignore  README.md  gen.py  pyproject.toml
